# hamada-os-new

./: Cargo.toml
.VSCodeCounter/2025-12-30_17-42-47/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
kernel/: Cargo.toml
kernel/src/: gdt.rs  lib.rs  main.rs
kernel/src/graphics/: graphics_engine.rs  mod.rs  objects.rs
kernel/src/interrupts/: cpu_exceptions.rs  interrupts.rs  keyboard.rs  mod.rs  timer.rs
src/: main.rs
