[package]
name = "kernel"
version = "0.1.0"
edition = "2024"

[dependencies]
bootloader_api = "0.11.12"
uart_16550 = "0.4.0"
x86_64 = { version = "0.14", features = ["instructions"] }
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
spin = "0.9"
pic8259 = "0.10.1"
pc-keyboard = "0.7.0"

